# ChangeLog for net-libs/openh323
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/openh323/ChangeLog,v 1.68 2005/08/25 03:07:28 agriffis Exp $

  15 Aug 2005; <stkn@gentoo.org> -openh323-1.12.2-r1.ebuild,
  -openh323-1.13.2.ebuild, -openh323-1.13.2-r1.ebuild,
  -openh323-1.13.5.ebuild, -openh323-1.15.2.ebuild:
  Removed obsolete ebuilds.

  06 Aug 2005; Bryan Østergaard <kloeri@gentoo.org>
  openh323-1.13.2-r2.ebuild:
  Stable on alpha.

  27 Jul 2005; Pieter Van den Abeele <pvdabeel@gentoo.org>  openh323-1.15.2.ebuild, openh323-1.15.2-r1.ebuild, openh323-1.15.3.ebuild:
  Marked latest versions stable. Used in the Freescale DES. We're Altivec
  optimizing the protocol, sound codecs, ...

*openh323-1.15.3 (11 Apr 2005)

  11 Apr 2005; Stefan Knoblich <stkn@gentoo.org> +openh323-1.15.3.ebuild:
  Version bump.

  10 Apr 2005; Stefan Knoblich <stkn@gentoo.org> -openh323-1.11.7.ebuild,
  -openh323-1.9.10-r1.ebuild:
  cleanup part #1

*openh323-1.15.2-r1 (03 Feb 2005)

  03 Feb 2005; Stefan Knoblich <stkn@gentoo.org> +openh323-1.13.2-r2.ebuild,
  +openh323-1.13.5-r1.ebuild, +openh323-1.15.2-r1.ebuild:
  Cleanups and important amd64 fixes.

  14 Jan 2005; <avatar@gentoo.org> openh323-1.15.2.ebuild:
  Added to ~ppc.

  12 Jan 2005; Stefan Knoblich <stkn@gentoo.org> openh323-1.15.2.ebuild:
  Mirrored now

  10 Jan 2005; Stefan Knoblich <stkn@gentoo.org> openh323-1.13.5.ebuild,
  openh323-1.15.2.ebuild:
  Filter -fstack-protector, this may cause problems (bug #75259)

  10 Jan 2005; Stefan Knoblich <stkn@gentoo.org> openh323-1.15.2.ebuild:
  Marked ~alpha.

  09 Jan 2005; Jason Wever <weeve@gentoo.org> openh323-1.15.2.ebuild:
  Added ~sparc keyword as it went missing in the version bump.

  08 Jan 2005; Stefan Knoblich <stkn@gentoo.org> openh323-1.15.2.ebuild:
  removed sample application (simph323, anyone needs that?), parallel building
  works, libs are now installed as libh323*.so.${PV} (imho more