@@ -1,6 +1,11 @@
 # ChangeLog for net-libs/openh323
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/openh323/ChangeLog,v 1.68 2005/08/25 03:07:28 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/openh323/ChangeLog,v 1.69 2005/09/12 20:06:57 stkn Exp $
+
+*openh323-1.15.6 (12 Sep 2005)
+
+  12 Sep 2005; Stefan Knoblich <stkn@gentoo.org> +openh323-1.15.6.ebuild:
+  Version bump, some cleanups and changes of /usr/lib/ symlinks.
 
   15 Aug 2005; <stkn@gentoo.org> -openh323-1.12.2-r1.ebuild,
   -openh323-1.13.2.ebuild, -openh323-1.13.2-r1.ebuild,
